<resources>
    <string name="app_name">Project2</string>
    <string name="startButton">Start</string>
    <string name="stopButton">Stop</string>
    <string name="colors">Change Colors</string>
    <string name="saveLayout">Save layout</string>
    <string name="load">Load Layout</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="GridN">Grid Name</string>
    <string name="GridD">Grid Date</string>

</resources>